Make sure the text stays visible while loading web fonts are loading

--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
          url('../fonts/opensans-regular.svg#LatoRegular') format('svg');
     font-weight: normal;
     font-style: normal;
-
+	font-display: swap;
 }
 
 
@@ -21,7 +21,7 @@
          url('../fonts/opensans-bold.svg#LatoRegular') format('svg');
     font-weight: normal;
     font-style: normal;
-
+	font-display: swap;
 }
 
 
@@ -34,7 +34,7 @@
          url('../fonts/opensans-semibold.svg#open_sanssemibold') format('svg');
     font-weight: normal;
     font-style: normal;
-
+	font-display: swap;
 }
 
 
@@ -585,7 +585,7 @@ a.app_link{
 	font-size: 14px;
 }
 
-.#tslider{
+#tslider{
 	text-align: center!important;
 	position: relative!important;
 }
